A couple of fixes found in code review
- Used a more fluent style with optionals
- Turned magic constants into final statics
- Fixed how aggregator run loop was testing for empty
- Added a few missing finals
- Used Collection.singletonList instead of List.of